# ChangeLog for dev-perl/Crypt-Rijndael
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Crypt-Rijndael/ChangeLog,v 1.24 2009/08/16 09:36:30 tove Exp $

  16 Aug 2009; Torsten Veller <tove@gentoo.org>
  -files/crypt-rijndael-amd64.patch:
  Remove unused patch

  02 Jul 2009; Jeroen Roovers <jer@gentoo.org> Crypt-Rijndael-1.06.ebuild:
  Stable for HPPA too.

  30 Sep 2008; Torsten Veller <tove@gentoo.org> -Crypt-Rijndael-1.01.ebuild,
  -Crypt-Rijndael-1.02.ebuild:
  Cleanup

*Crypt-Rijndael-1.07 (24 Aug 2008)

  24 Aug 2008; Torsten Veller <tove@gentoo.org> +Crypt-Rijndael-1.07.ebuild:
  Version bump

  13 Jun 2008; Raúl Porcel <armin76@gentoo.org> Crypt-Rijndael-1.06.ebuild:
  ia64/sparc/x86 stable

*Crypt-Rijndael-1.06 (29 Apr 2008)

  29 Apr 2008; Yuval Yaari <yuval@gentoo.org> -Crypt-Rijndael-0.05.ebuild,
  +Crypt-Rijndael-1.06.ebuild:
  Version bump

  19 Mar 2008; Jeroen Roovers <jer@gentoo.org> Crypt-Rijndael-1.04.ebuild:
  Stable for HPPA too.

  09 Jul 2007; Michael Cummings <mcummings@gentoo.org>
  Crypt-Rijndael-1.02.ebuild:
  sparc stable

  05 Jul 2007; Raúl Porcel <armin76@gentoo.org> Crypt-Rijndael-1.04.ebuild:
  ia64/x86 stable

  10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  Crypt-Rijndael-1.04.ebuild:
  sparc stable

  08 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  Crypt-Rijndael-1.04.ebuild:
  Marking amd64 stable

*Crypt-Rijndael-1.04 (09 Mar 2007)

  09 Mar 2007; Michael Cummings <mcummings@gentoo.org>
  +Crypt-Rijndael-1.04.ebuild:
  Version bump

*Crypt-Rijndael-1.02 (04 Feb 2007)

  04 Feb 2007; Michael Cummings <mcummings@gentoo.org>
  +Crypt-Rijndael-1.02.ebuild:
  Version bump

*Crypt-Rijndael-1.01 (13 Jan 2007)

  13 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Crypt-Rijndael-0.05.ebuild, +Crypt-Rijndael-1.01.ebuild:
  Version bump

  15 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  Crypt-Rijndael-0.05.ebuild:
  Stable on ia64.
