@@ -1,8 +1,10 @@
 DIST Crypt-Rijndael-1.04.tar.gz 26413 RMD160 61f9739f803c2bfc47e8ee73f446dbef3c725777 SHA1 027e02ba593a2ad9d140cf9c9dc18519ba23d57f SHA256 09074bf8bf0d7a1a70a6ecb943fce3c8516d9754f7661230bafdc074f5e1079f
 DIST Crypt-Rijndael-1.06.tar.gz 28458 RMD160 5e223d2caef81eb8d2f9cca6aa3e47f8582fcd66 SHA1 ca5a7a2a11a4c7dc50fafc868ee8eee8f25138df SHA256 f319f8ba16884759e8d2353d7dfcd8cabcc2a0bd39a8f4613b8fe43beef1623f
 DIST Crypt-Rijndael-1.07.tar.gz 28670 RMD160 452bca226b5bd6f16b4694e73d01a57845ca4fcb SHA1 9ba047ec5cb7e080d23b1f491fb814bb8185b2e4 SHA256 a3e3d662d1ad5e5346c78db1426fdec552ada5415da2dc2672bfe975834017ab
+DIST Crypt-Rijndael-1.08.tar.gz 28965 RMD160 eaa857ee047bfb0428bbb4e67f89d3c01eb9f17b SHA1 37b5059961fc44dd2dbbb49f92ca95cc1a95046c SHA256 f17518340fdad559188c640e97087fcc61446b0986f314df2c7cde53f005130f
 EBUILD Crypt-Rijndael-1.04.ebuild 560 RMD160 520111769b17fa20aa89eede23018105261612c5 SHA1 8ba02f7a09e75c8d11020f143f760fc239286ed8 SHA256 1063a8b0352a24abe70b547d2c2587db907bbb062168adfaf09a8b2da8f5c6ce
 EBUILD Crypt-Rijndael-1.06.ebuild 560 RMD160 464fb23d5fd4e1197c438f105be5f8fbcb035867 SHA1 098dc5c411e408414ab385257728f1d820de9b08 SHA256 c70cd3ad136a6793be5499acb3391a9d7c293172a53bb0bacfc19a8728e6d0e1
 EBUILD Crypt-Rijndael-1.07.ebuild 453 RMD160 79c84dd17dd4c7fa9ffd072ff8e18e3a14f41a23 SHA1 737cdb869bbc0222611a746c161833544c887013 SHA256 6c79791291a33d27cf8ff0afb87bf6ab9321cb4438ac44144ffe1d415acd8193
-MISC ChangeLog 3138 RMD160 8252a1cc5c9ea9bd217716468bc23aef6f776509 SHA1 a24539224930bda6a4aace5db366c84945dd7ac9 SHA256 70f15ec0e9169a31648b567fc2a121855ace0d9577653963b449bb690103c4db
+EBUILD Crypt-Rijndael-1.08.ebuild 520 RMD160 d76a100525580b43e49100631a6bd6edf66ae262 SHA1 55af291ec16e64c1cb90cf3868231ff0231ed8ad SHA256 852e7474f4240caaf6a57d9e94299d2801822f50ec7e8b5ad2106d0da8420438
+MISC ChangeLog 3267 RMD160 5d641fafae6437ae248048c831f6b975eb0f5898 SHA1 a11c0017dc84d134fa91afb706497edc0198e6f3 SHA256 c6da2d4037dcbb88dd26dca69980c51b54c7f3e936824721bdfad247cd0d35e2
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
